adding query student by cpf
